[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdes-mk"
version = "0.1.0"
description = "CDES Marketing Extension - Cannabis loyalty, campaigns, and analytics SDK"
readme = "README.md"
license = "MIT"
authors = [{ name = "Acidni LLC", email = "support@acidni.net" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://cdes.dev"
Documentation = "https://cdes.dev/docs/marketing"
Repository = "https://github.com/Acidni-LLC/cdes-mk-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["cdes_mk"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
